export default interface EmiteTemperatura {
    getTemperatura(): number;
}
