export interface ResultadoEnergia{
    termal: number;
    neta: number;
}